--- a/suss/com.mapbox.yml
+++ b/suss/com.mapbox.yml
@@ -1,3 +1,8 @@
 gradle_signatures:
-  - com.mapbox
+  - com\.mapbox(?!\.mapboxsdk:mapbox-sdk-services)
+
 license: NonFree
+
+MaintainerNotes: |
+  com.mapbox.mapboxsdk:mapbox-sdk-services seems to be fully under this license:
+  https://github.com/mapbox/mapbox-java/blob/main/LICENSE
