--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,7 +33,7 @@ test:
   stage: test
   before_script:
     - apt update -y
-    - apt install -y python3 python3-pytest python3-yaml
+    - apt install -y python3 python3-pytest python3-validators python3-yaml
   script:
     - tools/buildcache.py
     - pytest-3
