--- a/suss/io.objectbox.yml
+++ b/suss/io.objectbox.yml
@@ -1,3 +1,6 @@
+Name: ObjectBox Database
+code_signatures:
+  - io/objectbox
 gradle_signatures:
   - io.objectbox:objectbox-gradle-plugin
 license: NonFree
