--- a/suss/com.hypertrack.yml
+++ b/suss/com.hypertrack.yml
@@ -1,3 +1,6 @@
+license: NonFree
 gradle_signatures:
   - com\.hypertrack(?!:hyperlog)
-license: NonFree
+gradle_signatures_negative_examples:
+  # 'com.hypertrack:hyperlog', https://github.com/hypertrack/hyperlog-android#license
+  - com.hypertrack:hyperlog
