--- a/suss/com.mapbox.yml
+++ b/suss/com.mapbox.yml
@@ -1,7 +1,21 @@
+license: NonFree
 gradle_signatures:
   - com\.mapbox(?!\.mapboxsdk:mapbox-sdk-(services|geojson|turf):([3-5]))
-
-license: NonFree
+gradle_signatures_positive_examples:
+  - com.mapbox.mapboxsdk:mapbox-android-plugin-annotation-v7:0.6.0
+  - com.mapbox.mapboxsdk:mapbox-android-plugin-annotation-v8:0.7.0
+  - com.mapbox.mapboxsdk:mapbox-android-plugin-localization-v7:0.7.0
+  - com.mapbox.mapboxsdk:mapbox-android-plugin-locationlayer:0.4.0
+  - com.mapbox.mapboxsdk:mapbox-android-plugin-markerview-v8:0.3.0
+  - com.mapbox.mapboxsdk:mapbox-android-plugin-places-v8:0.9.0
+  - com.mapbox.mapboxsdk:mapbox-android-plugin-scalebar-v8:0.2.0
+  - com.mapbox.mapboxsdk:mapbox-android-sdk:7.3.0
+gradle_signatures_negative_examples:
+  # 'com.mapbox.mapboxsdk:mapbox-sdk-services',  # https://github.com/mapbox/mapbox-java/blob/main/LICENSE
+  - com.mapbox.mapboxsdk:mapbox-sdk-services:5.0.0
+  # 'com.github.johan12345' https://github.com/johan12345/EVMap/blob/19c0f311ad/app/build.gradle#L199-L213
+  - com.github.johan12345:mapbox-events-android:a21c324501
+  - implementation("com.github.johan12345.AnyMaps:anymaps-mapbox:$anyMapsVersion")
 
 MaintainerNotes: |
   It seems that all libs in https://github.com/mapbox/mapbox-java is fully FOSS
