--- a/suss/firebase.yml
+++ b/suss/firebase.yml
@@ -1,3 +1,42 @@
 gradle_signatures:
   - com(\.google)?\.firebase[.:](?!firebase-jobdispatcher|geofire-java)
 license: NonFree
+gradle_signatures_positive_examples:
+  - "	compile 'com.google.firebase:firebase-crash:11.0.8'"
+  - "	compile 'com.google.firebase:firebase-core:11.0.8'"
+  - com.firebase:firebase-client-android:2.5.2
+  - com.google.firebase.crashlytics
+  - com.google.firebase.firebase-perf
+  - com.google.firebase:firebase-ads
+  - com.google.firebase:firebase-analytics
+  - com.google.firebase:firebase-appindexing
+  - com.google.firebase:firebase-auth
+  - com.google.firebase:firebase-config
+  - com.google.firebase:firebase-core
+  - com.google.firebase:firebase-crash
+  - com.google.firebase:firebase-crashlytics
+  - com.google.firebase:firebase-database
+  - com.google.firebase:firebase-dynamic-links
+  - com.google.firebase:firebase-firestore
+  - com.google.firebase:firebase-inappmessaging
+  - com.google.firebase:firebase-inappmessaging-display
+  - com.google.firebase:firebase-messaging
+  - com.google.firebase:firebase-ml-natural-language
+  - com.google.firebase:firebase-ml-natural-language-smart-reply-model
+  - com.google.firebase:firebase-ml-vision
+  - com.google.firebase:firebase-perf
+  - com.google.firebase:firebase-plugins
+  - com.google.firebase:firebase-storage
+gradle_signatures_negative_examples:
+  # 'firebase-jobdispatcher', https://github.com/firebase/firebase-jobdispatcher-android/blob/master/LICENSE
+  - "    compile 'com.firebase:firebase-jobdispatcher:0.8.4'"
+  # 'geofire-android', https://github.com/firebase/geofire-java/blob/master/LICENSE
+  - "implementation 'com.firebase:geofire-java:3.0.0'"
+  # 'com.firebaseui', https://github.com/firebase/FirebaseUI-Android/blob/master/LICENSE
+  - "    compile 'com.firebaseui:firebase-ui-auth:3.1.3'"
+  - com.firebaseui:firebase-ui-database
+  - com.firebaseui:firebase-ui-storage
+  - com.github.axet:android-firebase-fake
+  - com.github.b3er.rxfirebase:firebase-database
+  - com.github.b3er.rxfirebase:firebase-database-kotlin
+  - com.segment.analytics.android.integrations:firebase
