core-google-shortcuts

--- a/suss/com.google.android.gms.yml
+++ b/suss/com.google.android.gms.yml
@@ -1,5 +1,6 @@
 gradle_signatures:
   - com.google.android.gms
+  - androidx.core:core-google-shortcuts
   - androidx.media3:media3-cast
   - androidx.media3:media3-datasource-cronet
   - androidx.work:work-gcm
