Remove start slashes that trip regex

--- a/suss/com.facebook.android.yml
+++ b/suss/com.facebook.android.yml
@@ -1,6 +1,6 @@
 gradle_signatures:
   - com.facebook.android
 code_signatures:
-  - /com/facebook/
+  - com/facebook
 # https://github.com/facebook/facebook-android-sdk/blob/main/LICENSE.txt
 license: NonFree
