--- a/suss/com.google.android.gms.yml
+++ b/suss/com.google.android.gms.yml
@@ -14,5 +14,5 @@ gradle_signatures:
   - play-services
   - xyz.belvi.mobilevision:barcodescanner
 code_signatures:
-  - /com/google/android/gms/
+  - com/google/android/gms
 license: NonFree
