--- a/suss/com.hypertrack.yml
+++ b/suss/com.hypertrack.yml
@@ -2,7 +2,7 @@ license: NonFree
 gradle_signatures:
   - com.hypertrack(?!:hyperlog)
 code_signatures:
-  - /com/hypertrack/(?!:hyperlog)
+  - com/hypertrack/(?!:hyperlog)
 gradle_signatures_negative_examples:
   # 'com.hypertrack:hyperlog', https://github.com/hypertrack/hyperlog-android#license
   - com.hypertrack:hyperlog
