--- a/suss/firebase.yml
+++ b/suss/firebase.yml
@@ -5,7 +5,7 @@ gradle_signatures:
   - com(\.google)?\.firebase[.:](?!firebase-jobdispatcher|geofire-java)
   - com.microsoft.appcenter:appcenter-push
 code_signatures:
-  - /com/google/firebase/
+  - com/google/firebase
 license: NonFree
 gradle_signatures_positive_examples:
   - "	compile 'com.google.firebase:firebase-crash:11.0.8'"
