--- a/suss/com.google.android.libraries.yml
+++ b/suss/com.google.android.libraries.yml
@@ -1,5 +1,8 @@
 gradle_signatures:
-  - com.google.android.libraries
+  - com.google.android.libraries(?!.mapsplatform.secrets-gradle-plugin)
 code_signatures:
   - com/google/android/libraries
+gradle_signatures_negative_examples:
+  # 'secrets-gradle-plugin', https://github.com/google/secrets-gradle-plugin/blob/master/LICENSE
+  - classpath "com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin:2.0.1"
 license: NonFree
