mariuszgromada.math - versions 4 and older are still FOSS

--- a/suss/org.mariuszgromada.math.yml
+++ b/suss/org.mariuszgromada.math.yml
@@ -4,6 +4,6 @@ documentation:
 code_signatures:
   - org/mariuszgromada/math/mxparser
 gradle_signatures:
-  - org.mariuszgromada.math:MathParser.org-mXparser
+  - org.mariuszgromada.math:MathParser.org-mXparser:[5-9]
 # https://mathparser.org/mxparser-license/
 license: NonFree
