Ignore oss-licenses-plugin

--- a/suss/com.google.android.gms.yml
+++ b/suss/com.google.android.gms.yml
@@ -1,5 +1,5 @@
 gradle_signatures:
-  - com.google.android.gms
+  - com.google.android.gms(?!.oss-licenses-plugin)
   - com.google.android.ump
   - androidx.core:core-google-shortcuts
   - androidx.credentials:credentials
