--- a/suss/com.wei.android.lib.yml
+++ b/suss/com.wei.android.lib.yml
@@ -3,4 +3,5 @@ code_signatures:
   - com/wei/android/lib/fingerprintidentify
 gradle_signatures:
   - com.wei.android.lib:fingerprintidentify
+  - com.github.uccmawei:FingerprintIdentify
 license: NonFree
