--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,7 @@ test:
   stage: test
   before_script:
     - apt update -y
-    - apt install -y python3 python3-pytest python3-validators python3-yaml
+    - apt install -y python3 python3-pytest python3-validators python3-ruamel.yaml
   script:
     - tools/buildcache.py
     - pytest-3
@@ -41,7 +41,7 @@ pages:
   stage: deploy
   before_script:
     - apt update -y
-    - apt install -y python3 python3-yaml
+    - apt install -y python3 python3-ruamel.yaml
   script:
     - tools/izzy.py
     - tools/buildcache.py
