add more name and documentation

--- a/suss/com.android.billingclient.yml
+++ b/suss/com.android.billingclient.yml
@@ -1,3 +1,6 @@
+name: BillingClient
+documentation:
+  - https://developer.android.com/google/play/billing/integrate
 gradle_signatures:
   - com.android.billingclient
   - com.google.androidbrowserhelper:billing
