--- a/suss/com.garmin.connectiq.yml
+++ b/suss/com.garmin.connectiq.yml
@@ -1,4 +1,4 @@
-Name: Connect IQ Mobile SDK for Android
+name: Connect IQ Mobile SDK for Android
 documentation:
   - https://developer.garmin.com/connect-iq/core-topics/mobile-sdk-for-android/
 code_signatures:
