--- a/suss/com.google.android.libraries.yml
+++ b/suss/com.google.android.libraries.yml
@@ -1,3 +1,4 @@
+name: Google Android Libraries
 gradle_signatures:
   - com.google.android.libraries(?!.mapsplatform.secrets-gradle-plugin)
 code_signatures:
