--- a/suss/com.google.android.gms.yml
+++ b/suss/com.google.android.gms.yml
@@ -1,3 +1,6 @@
+name: Google Mobile Services
+documentation:
+  - https://www.android.com/gms/
 gradle_signatures:
   - com.google.android.gms(?!.oss-licenses-plugin)
   - com.google.android.ump
