--- a/suss/com.onesignal.yml
+++ b/suss/com.onesignal.yml
@@ -1,3 +1,6 @@
+name: OneSignal Android Push Notification Plugin
+documentation:
+  - https://github.com/OneSignal/OneSignal-Android-SDK
 gradle_signatures:
   - com.onesignal:OneSignal
 code_signatures:
